# biosciences-temporal

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  TESTING_PLAN.md  docker-compose.yml  pyproject.toml
docs/: REFACTOR_PLAN.md  TEMPORAL_MCP_STATUS.md  metadata-spec.md
docs/validation/: cq14-feng-synthetic-lethality-retrospective.md  cq14-graph-payload.json  cq14-knowledge-graph.html  cq14-literature-references.md  cq14-temporal-workflow-design.md
src/biosciences_temporal/: README.md  __init__.py
src/biosciences_temporal/agents/: __init__.py  base.py  cq14.py  drugs.py  enrich.py  expand.py  models.py  resolve.py  trials.py  validate.py
src/biosciences_temporal/config/: __init__.py  retry_policies.py  timeouts.py
src/biosciences_temporal/scripts/: query_logfire.py  run_agent.py  run_worker.py  run_workflow.py
src/biosciences_temporal/temporal/: __init__.py  activities.py  client.py  worker.py  workflows.py
